# zing-stats

./: .gitignore  .gitlab-ci.yml  .sonarcloud.properties  .travis.yml  Comcast.github.io  Dockerfile  Dockerfile.quay  Quantumreset.github.io  README.md  container-index.html  crontab  docker-compose.yml  projects.json  projects_teams.json  requirements.txt  setup.cfg  setup.py  tox.ini  zing_stats.html.j2  zing_stats.py
.circleci/: config.yml
hooks/: build  post_push  pre_build
tests/: test_changes.py  test_parser.py  test_zing_stats.py  test_zing_stats_new.py
tests/data/: test_changes_page1.response  test_changes_page2.response  test_changes_page3.response  test_nonempty_changes.response
zingstats/: __init__.py  changes.py  parser.py  util.py  zing_stats.html.j2  zing_stats.py
